--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,3 +5,4 @@ v0.0.3, 2014-07-17 -- Overloaded dict iteritems method
 v0.0.4, 2014-08-20 -- Performed some cleanup
 v0.0.5, 2014-10-01 -- Mutable dict
 v0.0.6, 2014-11-02 -- Python 3 Support
+v0.0.7, 2014-11-03 -- More tests
