--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,3 +6,4 @@ v0.0.4, 2014-08-20 -- Performed some cleanup
 v0.0.5, 2014-10-01 -- Mutable dict
 v0.0.6, 2014-11-02 -- Python 3 Support
 v0.0.7, 2014-11-03 -- More tests
+v0.0.8, 2014-11-15 -- Python 3.4 build
